--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,15 @@
 			<version>3.8.0</version>
 			<type>pom</type>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.w3c/dom -->
+		<dependency>
+			<groupId>org.w3c</groupId>
+			<artifactId>dom</artifactId>
+			<version>2.3.0-jaxb-1.0.6</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
