--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,12 @@
 			<version>2.3.0-jaxb-1.0.6</version>
 		</dependency>
 
-
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.11.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
