--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 	<build>
 		<plugins>
 			<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
 				<configuration>
@@ -54,6 +55,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
+  </build>
 
 </project>
